--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .DS_Store
 .env
 .env*
-/frontend/node_modules/
+app/frontend/node_modules/
 
 # React Router
-/frontend/.react-router/
-/frontend/build/
+app/frontend/.react-router/
+app/frontend/build/
