--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -15,7 +15,8 @@
     "isbot": "^5.1.31",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router": "7.12.0"
+    "react-router": "7.12.0",
+    "react-router-dom": "^7.12.0"
   },
   "devDependencies": {
     "@react-router/dev": "7.12.0",
@@ -23,6 +24,7 @@
     "@types/node": "^22",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.2",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
     "vite": "^7.1.7",
