--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -16,7 +16,8 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-router": "7.12.0",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "recordpanel": "^1.0.0"
   },
   "devDependencies": {
     "@react-router/dev": "7.12.0",
