--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -12,12 +12,15 @@
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "@supabase/supabase-js": "^2.90.1",
+    "html2canvas": "^1.4.1",
     "isbot": "^5.1.31",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-media-recorder": "^1.7.2",
     "react-router": "7.12.0",
     "react-router-dom": "^7.12.0",
-    "recordpanel": "^1.0.0"
+    "recordpanel": "^1.0.0",
+    "use-react-screenshot": "^4.0.0"
   },
   "devDependencies": {
     "@react-router/dev": "7.12.0",
